// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs widget should render fieldset 1`] = `
<Uncontrolled(Tabs)
  className="tf-tabs"
  id="undefined-tabs"
>
  <Tab
    eventKey={0}
    tabClassName=""
    title="User"
  >
    <Fieldset
      errors={Object {}}
      schema={
        Object {
          "items": Array [
            Object {
              "key": Array [
                "user",
                "firstname",
              ],
              "schema": Object {
                "type": "string",
              },
              "type": "text",
            },
            Object {
              "key": Array [
                "user",
                "lastname",
              ],
              "schema": Object {
                "type": "string",
              },
              "type": "text",
            },
          ],
          "title": "User",
        }
      }
    />
  </Tab>
  <Tab
    eventKey={1}
    tabClassName=""
    title="Other"
  >
    <Fieldset
      errors={Object {}}
      schema={
        Object {
          "items": Array [
            Object {
              "key": Array [
                "comment",
              ],
              "schema": Object {
                "type": "string",
              },
              "type": "text",
            },
          ],
          "title": "Other",
        }
      }
    />
  </Tab>
</Uncontrolled(Tabs)>
`;

exports[`Tabs widget should render invalid tab 1`] = `
<Uncontrolled(Tabs)
  className="tf-tabs"
  id="undefined-tabs"
>
  <Tab
    eventKey={0}
    tabClassName="undefined"
    title="User"
  >
    <Fieldset
      errors={
        Object {
          "user,firstname": "This is wrong",
        }
      }
      schema={
        Object {
          "items": Array [
            Object {
              "key": Array [
                "user",
                "firstname",
              ],
              "schema": Object {
                "type": "string",
              },
              "type": "text",
            },
            Object {
              "key": Array [
                "user",
                "lastname",
              ],
              "schema": Object {
                "type": "string",
              },
              "type": "text",
            },
          ],
          "title": "User",
        }
      }
    />
  </Tab>
  <Tab
    eventKey={1}
    tabClassName=""
    title="Other"
  >
    <Fieldset
      errors={
        Object {
          "user,firstname": "This is wrong",
        }
      }
      schema={
        Object {
          "items": Array [
            Object {
              "key": Array [
                "comment",
              ],
              "schema": Object {
                "type": "string",
              },
              "type": "text",
            },
          ],
          "title": "Other",
        }
      }
    />
  </Tab>
</Uncontrolled(Tabs)>
`;
